# Zimbra

./: .dockerignore  .env.example  .gitignore  Dockerfile  Initial Launch of the Updated Stakeholder Sentiment Analysis Application.docx  LInes of Code to run 1 at a time to launch app.txt  README.md  Zimbra_pred_app_env.txt  app.py  app_runner.py  pyproject.toml  requirements.txt
data_scrapers_raw/: binance_btc_data_converted.py  binance_eth_data_converted.py  inflation_rate_scraper_converted.py  reddit_scraper_converted.py  twitter_scraper_converted.py
tests/: test_adapters.py  test_clustering.py  test_database.py  test_new_adapters.py  test_sentiment.py  test_x_connectivity.py
zimbra/: __init__.py  clustering.py  config.py  database.py  models.py  sentiment.py
zimbra/adapters/: __init__.py  base.py  binance.py  coindesk.py  cointelegraph.py  commodity.py  economic.py  google_news.py  reddit.py  x_api.py  yahoo.py
zimbra/ui/: dashboard.py
