[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zimbra"
version = "1.0.0"
description = "Stakeholder Sentiment Market Guidance based on the Zimbra et al. (2015) paper"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Allan" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "plotly>=5.22.0",
    "scikit-learn>=1.5.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "textblob>=0.18.0.post0",
    "lxml>=5.2.2",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[project.scripts]
zimbra-app = "app_runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zimbra*"]
